fixed header alignment

--- a/src/scss/layouts/header.scss
+++ b/src/scss/layouts/header.scss
@@ -143,4 +143,12 @@
 			}
 		}
 	}
+
+	&--full{
+		h1 {
+			@include breakpoint(large) {
+				margin-bottom: 0;
+			}			
+		}
+	}
 }
